Made interpreter fully functioning when accessing through netlify functions, worked a bit on ui

--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
             <input type="text" id="inputtext" placeholder="Input..." >
         </div>
         <div class="container">
-            <div id="codewrapper">
-                <div id="linenums"></div>
-                <textarea id="code" placeholder="Enter Brainfuck code here..."></textarea>
+            <div class="filebar"></div>
+            <div class="codespacewrapper">
+                <div id="codewrapper">
+                    <div id="linenums"></div>
+                    <textarea id="code" placeholder="Enter Brainfuck code here..."></textarea>
+                </div>
+                <div class="separator" id="separator"></div>
+                <div class="output" id="output">Output...</div>
             </div>
-            <div class="separator" id="separator"></div>
-            <div class="output" id="output">Output...</div>
+                
         </div>
     </div>
     
