Made filesystem to create/delete/switch between files, starting work on functions like export/import

--- a/index.html
+++ b/index.html
@@ -15,7 +15,21 @@
             <input type="text" id="inputtext" placeholder="Input..." >
         </div>
         <div class="container">
-            <div class="filebar"></div>
+            <div id="functionbar">
+                <div class="functiondiv">
+                    <button class="functionbtn">Export...</button>
+                    <div class="dropcontent"></div>
+                </div>
+                <div class="functiondiv">
+                    <button class="functionbtn">Import...</button>
+                    <div class="dropcontent"></div>
+                </div>
+            </div>
+            <div id="filebar">
+                <div class="filediv" id="1">main.bf</div>
+                <button id="addfilebtn">+</button>
+            </div>
+            
             <div class="codespacewrapper">
                 <div id="codewrapper">
                     <div id="linenums"></div>
