--- a/index.html
+++ b/index.html
@@ -7,23 +7,33 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
-<body style="padding: 0; margin: 0; overflow: hidden;">
+<body style="padding: 0; margin: 0; overflow: hidden;" onload='document.getElementById("cat").style.width = document.getElementById("container").getBoundingClientRect().left + "px"'>
     <div class="containerwrapper">
         <div style=" height: 30px; width: 100%; background-color: transparent; vertical-align: middle; padding-bottom: 10px; overflow: hidden; display: flex; flex-direction: row;">
-            <button id="runbtn">Run</button>
-            <button id="stopbtn">Stop</button>
+            <button id="runbtn" onclick="runCode();">Run</button>
+            <button id="stopbtn" onclick="stopCode()">Stop</button>
             <input type="text" id="inputtext" placeholder="Input..." >
         </div>
-        <div class="container">
+        <div id="container" class="container">
             <div id="functionbar">
+                <div class="functiondiv catfunction">
+                    <img id="cat" src="./cat (1).jpg">
+                    <button class="functionbtn" onclick="showCat()">toggle cat</button>
+                    
+                </div>
+
                 <div class="functiondiv">
-                    <button class="functionbtn">Export...</button>
-                    <div class="dropcontent"></div>
+                    <button class="functionbtn" onclick="showdropdown('exportdropdown')">Export...</button>
+                    <div class="dropcontent" id="exportdropdown">
+                        <button onclick="exportCurrent()">Current</button>
+                        <button onclick="exportAll()">All</button>
+                    </div>
                 </div>
                 <div class="functiondiv">
-                    <button class="functionbtn">Import...</button>
-                    <div class="dropcontent"></div>
+                    <button class="functionbtn" onclick="document.getElementById('fileinput').click()">Import</button>
                 </div>
+                
+                <input type="file" id="fileinput" style="display: none;" onchange='importFile(this, this.files[0].name)'>
             </div>
             <div id="filebar">
                 <div class="filediv" id="1">main.bf</div>
